--- a/Clickless.csproj
+++ b/Clickless.csproj
@@ -41,6 +41,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\CursorStateTracker.cs" />
+    <Compile Include="src\CursorTypeTracker.cs" />
+    <Compile Include="src\ICursorUpdator.cs" />
     <Compile Include="src\main.cs" />
     <Compile Include="src\MathUtil.cs" />
     <Compile Include="src\MouseController.cs" />
