--- a/Clickless.csproj
+++ b/Clickless.csproj
@@ -41,6 +41,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\POINT.cs" />
+    <Compile Include="src\RECT.cs" />
     <Compile Include="src\CursorImageGenerator.cs" />
     <Compile Include="src\CursorInfoRetriever.cs" />
     <Compile Include="src\CursorStateTracker.cs" />
@@ -49,7 +51,13 @@
     <Compile Include="src\MathUtil.cs" />
     <Compile Include="src\MouseController.cs" />
     <Compile Include="src\ScreenController.cs" />
+    <Compile Include="src\util\test\TestWindowInfoRetriever.cs" />
     <Compile Include="src\util\test\TestController.cs" />
+    <Compile Include="src\util\test\TestWindowTestHelper.cs" />
+    <Compile Include="src\util\test\WindowTestHelper.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\WindowInfoRetriever.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="nunit.framework, Version=3.14.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
@@ -69,6 +77,11 @@
     <Folder Include="images\" />
     <Folder Include="python\" />
     <Folder Include="src\images\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="src\util\test\WindowTestHelper.resx">
+      <DependentUpon>WindowTestHelper.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
