--- a/Clickless.csproj
+++ b/Clickless.csproj
@@ -41,6 +41,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\CommandGenerator.cs" />
+    <Compile Include="src\KeyMatcher.cs" />
+    <Compile Include="src\KeyboardHook.cs" />
     <Compile Include="src\POINT.cs" />
     <Compile Include="src\RECT.cs" />
     <Compile Include="src\CursorImageGenerator.cs" />
@@ -51,6 +54,14 @@
     <Compile Include="src\MathUtil.cs" />
     <Compile Include="src\MouseController.cs" />
     <Compile Include="src\ScreenController.cs" />
+    <Compile Include="src\MLClientWebsocket.cs" />
+    <Compile Include="src\TextRectGenerator.cs" />
+    <Compile Include="src\UI\TextRect.cs" />
+    <Compile Include="src\UI\TransparentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\util\test\TestCommandGenerator.cs" />
+    <Compile Include="src\util\test\TestMLWebsocketClient.cs" />
     <Compile Include="src\util\test\TestWindowInfoRetriever.cs" />
     <Compile Include="src\util\test\TestController.cs" />
     <Compile Include="src\util\test\TestWindowTestHelper.cs" />
@@ -68,6 +79,7 @@
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\System.Runtime.CompilerServices.Unsafe.4.5.3\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
