--- a/Clickless.csproj
+++ b/Clickless.csproj
@@ -43,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\CommandGenerator.cs" />
+    <Compile Include="src\EdgeEnumerator.cs" />
+    <Compile Include="src\EdgePt.cs" />
     <Compile Include="src\KeyMatcher.cs" />
     <Compile Include="src\KeyboardHook.cs" />
     <Compile Include="src\MLClientOpenCVSharp.cs" />
@@ -58,6 +60,9 @@
     <Compile Include="src\ScreenController.cs" />
     <Compile Include="src\MLClientWebsocket.cs" />
     <Compile Include="src\TextRectGenerator.cs" />
+    <Compile Include="src\UI\Settings.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="src\UI\TextRect.cs" />
     <Compile Include="src\UI\TransparentForm.cs">
       <SubType>Form</SubType>
@@ -98,6 +103,18 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="RBush, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\RBush.3.0.0\lib\netstandard1.2\RBush.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpDX, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <HintPath>packages\SharpDX.4.2.0\lib\net45\SharpDX.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpDX.D3DCompiler, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <HintPath>packages\SharpDX.D3DCompiler.4.2.0\lib\net45\SharpDX.D3DCompiler.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpDX.Direct3D11, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <HintPath>packages\SharpDX.Direct3D11.4.2.0\lib\net45\SharpDX.Direct3D11.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpDX.DXGI, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b4dcf0f35e5521f1, processorArchitecture=MSIL">
+      <HintPath>packages\SharpDX.DXGI.4.2.0\lib\net45\SharpDX.DXGI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.AppContext, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -266,6 +283,9 @@
     <Folder Include="src\images\" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="src\UI\Settings.resx">
+      <DependentUpon>Settings.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="src\util\test\WindowTestHelper.resx">
       <DependentUpon>WindowTestHelper.cs</DependentUpon>
     </EmbeddedResource>
