--- a/packages.config
+++ b/packages.config
@@ -12,6 +12,10 @@
   <package id="OpenCvSharp4.Windows" version="4.10.0.20240616" targetFramework="net48" />
   <package id="OpenCvSharp4.WpfExtensions" version="4.10.0.20240616" targetFramework="net48" />
   <package id="RBush" version="3.0.0" targetFramework="net48" />
+  <package id="SharpDX" version="4.2.0" targetFramework="net48" />
+  <package id="SharpDX.D3DCompiler" version="4.2.0" targetFramework="net48" />
+  <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net48" />
+  <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
