--- a/Clickless.csproj
+++ b/Clickless.csproj
@@ -44,15 +44,19 @@
     <None Include="App.config" />
     <None Include="app.manifest" />
     <None Include="packages.config" />
+    <None Include="src\edge\SobelFilter.cso">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\CommandGenerator.cs" />
     <Compile Include="src\EdgeEnumerator.cs" />
     <Compile Include="src\EdgePt.cs" />
+    <Compile Include="src\edge\EdgeDetectComputeShader.cs" />
     <Compile Include="src\InputHandler.cs" />
     <Compile Include="src\KeyboardHook.cs" />
     <Compile Include="src\KeySetComparer.cs" />
-    <Compile Include="src\MLClientOpenCVSharp.cs" />
+    <Compile Include="src\edge\MLClientOpenCVSharp.cs" />
     <Compile Include="src\POINT.cs" />
     <Compile Include="src\RECT.cs" />
     <Compile Include="src\CursorImageGenerator.cs" />
@@ -63,13 +67,14 @@
     <Compile Include="src\MathUtil.cs" />
     <Compile Include="src\MouseController.cs" />
     <Compile Include="src\ScreenController.cs" />
-    <Compile Include="src\MLClientWebsocket.cs" />
+    <Compile Include="src\edge\MLClientWebsocket.cs" />
     <Compile Include="src\TextRectGenerator.cs" />
     <Compile Include="src\UI\TextRect.cs" />
     <Compile Include="src\UI\TransparentForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="src\util\test\TestCommandGenerator.cs" />
+    <Compile Include="src\util\test\TestCustomEdgeDetection.cs" />
     <Compile Include="src\util\test\TestMLClientOpenCVSharp.cs" />
     <Compile Include="src\util\test\TestMLWebsocketClient.cs" />
     <Compile Include="src\util\test\TestWindowInfoRetriever.cs" />
@@ -288,6 +293,11 @@
     <EmbeddedResource Include="src\util\test\WindowTestHelper.resx">
       <DependentUpon>WindowTestHelper.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="src\edge\SobelFilter.hlsl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
