--- a/Clickless.csproj
+++ b/Clickless.csproj
@@ -44,7 +44,7 @@
     <None Include="App.config" />
     <None Include="app.manifest" />
     <None Include="packages.config" />
-    <None Include="src\edge\SobelFilter.cso">
+    <None Include="resources\SobelFilter.cso">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
