--- a/Clickless.csproj
+++ b/Clickless.csproj
@@ -54,8 +54,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\CommandGenerator.cs" />
+    <Compile Include="src\edge\DetectionSettings.cs" />
     <Compile Include="src\edge\IEdgeProvider.cs" />
-    <Compile Include="src\edge\ImageToRectProvider.cs" />
+    <Compile Include="src\edge\ImageToRectEngine.cs" />
     <Compile Include="src\edge\MatEnumerator.cs" />
     <Compile Include="src\edge\EdgePt.cs" />
     <Compile Include="src\edge\ImageRectDetectComputeShader.cs" />
