--- a/Clickless.csproj
+++ b/Clickless.csproj
@@ -36,6 +36,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Images\EntireKeyboard.png" />
+    <None Remove="Resources\Images\EntireKeyboard.svg" />
+    <None Remove="Resources\Images\LeftKeyboardOnly.png" />
+    <None Remove="Resources\Images\LeftKeyboardOnly.svg" />
+    <None Remove="Resources\Images\RightKeyboardOnly.png" />
+    <None Remove="Resources\Images\RightKeyboardOnly.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <COMReference Include="{215d64d2-031c-33c7-96e3-61794cd1ee61}">
       <WrapperTool>tlbimp</WrapperTool>
       <VersionMinor>4</VersionMinor>
@@ -67,27 +76,46 @@
     <PackageReference Include="SharpDX.Direct3D11" Version="4.2.0" />
     <PackageReference Include="SharpDX.D3DCompiler" Version="4.2.0" />
     <PackageReference Include="SharpDX.DXGI" Version="4.2.0" />
+    <PackageReference Include="SharpVectors.Wpf" Version="1.7.0" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
   </ItemGroup>
 
 
 
   <ItemGroup>
-    <Content Include="resources\DBScan.hlsl" />
-    <Content Include="resources\SobelFilter.hlsl">
+    <Content Include="Resources\DBScan.hlsl" />
+    <Content Include="Resources\SobelFilter.hlsl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="images\" />
-    <Folder Include="Models\" />
-    <Folder Include="ViewModels\" />
     <Folder Include="src\images\" />
   </ItemGroup>
 
   <ItemGroup>
     <Page Include="App.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Images\EntireKeyboard.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\EntireKeyboard.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\LeftKeyboardOnly.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\LeftKeyboardOnly.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\RightKeyboardOnly.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\RightKeyboardOnly.svg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
