--- a/Clickless.csproj
+++ b/Clickless.csproj
@@ -68,6 +68,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dbscan.RBush" Version="3.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NUnit" Version="3.14.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="OpenCvSharp4" Version="4.10.0.20240616" />
